[gd_scene load_steps=3 format=3 uid="uid://bhcs3wfu8tx1d"]

[ext_resource type="Script" uid="uid://dt8flxxqrwvek" path="res://scripts/dialogue/speech_ui.gd" id="1_i8c70"]

[sub_resource type="SystemFont" id="SystemFont_3klm0"]
subpixel_positioning = 0

[node name="Dialogue" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_i8c70")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_left = 190.0
offset_top = 70.0
offset_right = -162.0
offset_bottom = 190.0
grow_horizontal = 2

[node name="dialogue_box" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="dialogue_speaker" type="Label" parent="CanvasLayer/Panel/dialogue_box"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_3klm0")
text = "NPC Name"

[node name="dialogue_text" type="Label" parent="CanvasLayer/Panel/dialogue_box"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
text = "How about this - I've got a feather I found lying around, I'll give it to you if you manage to entertain my scoundrells for a bit."
autowrap_mode = 3
